<resources>
    <string name="app_name">Clean Scan</string>
    <string name="base_storage_path">PDF Scanner/data/</string>
    <string name="base_staging_path">PDF Scanner/stage/</string>
    <string name="search_hint">Search Documents</string>

    <string name="scan_shortcut_short_label">New Document</string>
    <string name="scan_shortcut_long_label">Scan A New Document</string>
    <string name="scan_disabled_message">Scanning Disabled</string>

    <string name="ocr_waiting_text">Extracting Text, Please Wait ...</string>
    <string name="ocr_failed_text">Unable to Extract Any Text.</string>
    <string name="ocr_title">Automatic Text Extraction</string>
    <string name="multi_page_title">Currently Scanned Pages</string>

    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_search">Search</string>
    <string name="menu_ocr">Extract Text</string>
    <string name="menu_settings">Settings</string>

    <string name="save_pdf">save</string>
    <string name="add_new_page">Add page</string>
    <string name="image_picker_title">Pick image</string>

    <string name="intro_title1">Scan Documents</string>
    <string name="intro_desc1">Easily digitize all your physical documents by converting them to PDFs</string>

    <string name="intro_title2">Extract Texts</string>
    <string name="intro_desc2">Share usable texts from documents, so that you don\'t have to type it ever again</string>

    <string name="intro_title3">Organize Better</string>
    <string name="intro_desc3">Categorize easily, and manage your document clutter much better</string>

    <string-array name="category_array">
        <item>Others</item>
        <item>Shopping</item>
        <item>Vehicle</item>
        <item>Medical</item>
        <item>Legal</item>
        <item>Housing</item>
        <item>Books</item>
        <item>Food</item>
        <item>Banking</item>
        <item>Receipts</item>
        <item>Manuals</item>
        <item>Travel</item>
        <item>Notes</item>
        <item>ID</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>
    <string name="scanning_header">Scanning</string>
    <string name="image_quality_title">Image Quality</string>
    <string name="key_image_quality">IMAGE_QUALITY</string>
    <string name="value_image_quality">FAST</string>

    <string name="setting_styling_header">Style</string>
    <string name="setting_theme_title">Theme</string>
    <string name="setting_theme_key">THEME_SHADE</string>
    <string name="setting_theme_default">0</string>

</resources>
